# c_programming

./: .gitignore
.github/workflows/: build-and-lint.yml
src/01dec25/: CMakeLists.txt  double_microscope.c
src/01dec25/binary/: CMakeLists.txt  bin_numbers.c  bin_numbers.h  main.c
src/06oct25/: CMakeLists.txt  build.md  main.c  merge_sort.c  merge_sort.h  merge_sort.s
src/18sep25/: CMakeLists.txt
src/23oct25/: CMakeLists.txt  main.c  sorting_station.c
src/25sep25/: CMakeLists.txt  lucky_tickets.c  polynomial_calculation.c  quotient.c  swap_array_parts.c
src/28oct25/: CMakeLists.txt  loop_list.c  loop_list.h  main.c  schitalochka.c  sorted_list.c  sorted_list.h
src/29sep25/: CMakeLists.txt  braces.c  count.c  zero_elements.c
src/list/: list.c  list.h
src/rewrite/task1/: main.c
src/rewrite/task2/: main.c
src/rewrite/task3/: list.c
src/rewrite2/: tracker.c  tracker.h  vector.c  vector.h
src/stack/: stack.c  stack.h
