cmake_minimum_required(VERSION 3.25)
project(styleguide C)
add_executable(lucky_tickets lucky_tickets.c)
add_executable(polynomial_calculation polynomial_calculation.c)
add_executable(quotient quotient.c)
add_executable(swap_array_parts swap_array_parts.c)
target_compile_options(lucky_tickets PRIVATE -Wall -Wextra)
target_compile_options(polynomial_calculation PRIVATE -Wall -Wextra)
target_compile_options(quotient PRIVATE -Wall -Wextra)
target_compile_options(swap_array_parts PRIVATE -Wall -Wextra)