cmake_minimum_required(VERSION 3.25)
project(list C)
add_library(SortedList sorted_list.c)
add_library(LoopList loop_list.c)
add_executable(main main.c)
add_executable(schitalochka schitalochka.c)
target_link_libraries(main PRIVATE SortedList)
target_link_libraries(schitalochka PRIVATE LoopList)
target_compile_options(main PRIVATE -Wall -Wextra)
target_compile_options(schitalochka PRIVATE -Wall -Wextra)